# diy

./: README.md
CSAPP/: 01 C Malloc和Free的实现.md  01 计算机系统漫游.md  04 BombLab.md  2.1 信息的存储.md  2.2 整数的表示.md  2.3 整数的运算.md  2.4 浮点数.md  3.1 程序的机器级表示.md  3.10 缓冲区溢出.md  3.2 寄存器与数据传送指令.md  3.3 栈与数据传送指令.md  3.4 算术和逻辑运算指令.md  3.5 指令与条件码.md  3.6 跳转指令与循环.md  3.7 过程(函数调用).md  3.8 数组的分配和访问.md  3.9 结构体和联合体.md  4.1 指令系统结构.md  4.10 流水线的控制逻辑.md  4.2 数字电路与处理器设计.md  4.3 Y86-64的实现顺序.md  4.4 Y86-64处理器的硬件结构.md  4.5 流水线的通用原理.md  4.6 流水线的硬件结构.md  4.7 数据冒险.md  4.8 控制冒险.md  4.9 Y86-64的流水实现.md  5.1 优化程序性能.md  5.3 理解现代处理器.md  README.md  imgre.py
CSAPP/labs/: 03 DataLab.md  04 BombLab.md
DeepRL/: unit1.ipynb
Karpathy Series/Makemore/: nplm.ipynb  wavenet.ipynb
Karpathy Series/Micrograd/: micrograd-2.ipynb
Karpathy-Series/: README.md
Karpathy-Series/Makemore/: backprop.ipynb  batch-norm.ipynb
Karpathy-Series/Micrograd/: micrograd-1.ipynb
OpenAI-Triton/: online_softmax.py  softmax.py  tiled_matrix_mul.py  vector_add.py
opengl-lab/: .gitignore  CMakeLists.txt  glad.c  main.cpp  vertex_shader.glsl
opengl-lab/dependencies/include/glad/: glad.h
